# rusty-rc

./: Cargo.toml  Embed.toml
.cargo/: config
src/: hid.rs  inputs.rs  main.rs  radio.rs  types.rs
src/radios/: hitec_aurora_9.rs
